--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -80,13 +80,13 @@
         "sideSellT": "Sell",
         "typeBuyT": "Buy",
         "typeSellT": "Sell",
-        "payway": "Payment method",
+        "payway": "Payment",
         "alipay": "Alipay",
         "weixin": "WeChat",
         "otherBank": "OtherBank",
         "theBank": "Bank",
         "cash": "Cash",
-        "selectPayType": "Select Payment Method",
+        "selectPayType": "Select Payment",
         "bank": "Bank",
         "huione": "Huiwang",
         "stateWait"      : "Waiting",
@@ -319,7 +319,7 @@
         "refusal": "Reason for rejection"
     },
     "payway": {
-        "addpay": "Add payment method",
+        "addpay": "Add payment",
         "name": "Name",
         "contact": "Contact information",
         "pName": "Please enter your username",
@@ -333,13 +333,13 @@
         "qrc": "QR code",
         "pQrc": "Please upload the payment QR code",
         "selecPayWay": "Select payment type",
-        "payway": "Payment method",
+        "payway": "Payment",
         "bankDeposit": "Account Bank",
         "Placetel": "please fill in the contact number,",
         "Placeaddress": "please fill in the transaction address,",
         "Placefulladdress": "please fill in the Full address,",
         "Fulladdress": "Full address,",
-        "Deletetitle": "are you sure you want to delete the collection and payment method",
+        "Deletetitle": "are you sure you want to delete the collection and payment",
         "Address": "transaction address"
     },
     "otc": {
@@ -359,7 +359,7 @@
         "orderFailed": "Order Failed",
         "enterNum": "Please enter the quantity or amount",
         "enterNum2": "Please enter the number",
-        "selectPayWay": "Please select payment method",
+        "selectPayWay": "Please select payment",
         "buyCurrency": "Trading Currency",
         "orderType": "Order Type",
         "unitPrice": "Unit Price",
@@ -409,7 +409,7 @@
         "appealSuccess": "Appeal successful",
         "payPwd": "Please bind the payment password first",
         "bind": "To bind",
-        "noPayWay": "There is currently no supported payment method",
+        "noPayWay": "There is currently no supported payment",
         "noBusiness": "You are not an advertising business yet, please apply for certification first",
         "uploadPhoto": "Please upload photo voucher",
         "uploadPhoto2": "Upload photo certificate",
@@ -426,7 +426,7 @@
         "protocol": "Advertisement Publisher Agreement",
         "manage": "Advertising Management",
         "order": "Off-site order",
-        "payment": "Payment Method",
+        "payment": "Payment",
         "business": "Advertising business",
         "vfyBus": "Verified Merchant",
         "vfyBused": "Verified Merchant",
@@ -645,7 +645,7 @@
         "protoWord46": "the advertiser leasing multiple cards without authorization, using a bank card in the name of another person to collect or pay for illegal purposes, or other money laundering, causing damage to the relevant user or a third party;",
         "protoWord47": "The advertiser has an unusually appealed pending order, but due to other objective reasons (such as being detained by the police, etc.), it is really impossible to contact me;",
         "protoWord48": "The advertiser has other violations of this agreement or any legal documents or trading rules on this platform;",
-        "protoWord49": "Failure to report to the platform in a timely manner according to regulations after the collection and payment methods are frozen;",
+        "protoWord49": "Failure to report to the platform in a timely manner according to regulations after the collection and payment are frozen;",
         "protoWord50": "In the unauthorized cross-platform transaction, the advertiser kept or set up the payment and payment accounts of other platforms as the same payment and payment accounts on the platform, and failed to effectively isolate the risk funds, resulting in the freezing of other platform user accounts;",
         "protoWord51": "Other circumstances that are reasonably determined by the platform to require deduction of guaranteed assets",
         "protoWord52": "The specific deduction amount of guaranteed assets shall be determined based on the severity of the actual impact after the platform risk control assessment:",
