--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -11,6 +11,7 @@
         "updateInfo": "Update Content",
         "thirdLogin": "Third party quick login",
         "send": "Send",
+        "logging": "Logging in",
         "send2": "Send",
         "save": "Save",
         "scan": "Scan it",
