--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -11,6 +11,7 @@
         "updateInfo": "更新內容",
         "thirdLogin": "協力廠商快捷登入",
         "send": "發 送",
+        "logging": "登入中",
         "send2": "發送",
         "release": "發 布",
         "releaseTime": "發佈時間",
