--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -103,6 +103,16 @@
         "appealTypePaidButNotRelease"  : "Paid without currency",
         "appealTypeMaliciousOrder"     : "Malicious order",
         "appealTypeFalsePaid"          : "Malicious click paid",
+        "balanceLogTypeDeposit":      "Recharge",
+        "balanceLogTypeWithdraw":     "Withdrawal",
+        "balanceLogTypeOtcBuy":       "OTC buying",
+        "balanceLogTypeOtcSell":      "OTC sell",
+        "balanceLogTypeMerchantBail": "Merchant Bail",
+        "balanceLogTypePenalty":      "Penalty",
+        "balanceLogTypeReward":       "Reward",
+        "balanceLogTypeSendRedEnvelope":  "Send red envelope",
+        "balanceLogTypeRedEnvelopeRefund":"Red envelope refund",
+        "balanceLogTypeGotRedEnvelope":   "Got red envelope",
         "ID": "ID card",
         "passport": "Passport",
         "release": "release",
