--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -147,6 +147,16 @@
         "appealTypePaidButNotRelease"  : "已付款不放币",
         "appealTypeMaliciousOrder"     : "恶意下单",
         "appealTypeFalsePaid"          : "恶意点击已付款",
+        "balanceLogTypeDeposit":      "充值",
+        "balanceLogTypeWithdraw":     "提现",
+        "balanceLogTypeOtcBuy":       "场外买入",
+        "balanceLogTypeOtcSell":      "场外卖出",
+        "balanceLogTypeMerchantBail": "商家保证金",
+        "balanceLogTypePenalty":      "罚金",
+        "balanceLogTypeReward":       "奖金",
+        "balanceLogTypeSendRedEnvelope":  "发红包",
+        "balanceLogTypeRedEnvelopeRefund":"红包退款",
+        "balanceLogTypeGotRedEnvelope":   "得到红包",
         "ID": "身份证",
         "passport": "护照",
         "unrecognized": "无法识别此图片",
