--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -146,6 +146,16 @@
         "appealTypePaidButNotRelease" : "已付款不放幣",
         "appealTypeMaliciousOrder" : "惡意下單",
         "appealTypeFalsePaid" : "惡意點擊已付款",
+        "balanceLogTypeDeposit": "充值",
+        "balanceLogTypeWithdraw": "提現",
+        "balanceLogTypeOtcBuy": "場外買入",
+        "balanceLogTypeOtcSell": "場外賣出",
+        "balanceLogTypeMerchantBail": "商家保證金",
+        "balanceLogTypePenalty": "罰金",
+        "balanceLogTypeReward": "獎金",
+        "balanceLogTypeSendRedEnvelope": "發紅包",
+        "balanceLogTypeRedEnvelopeRefund": "紅包退款",
+        "balanceLogTypeGotRedEnvelope": "得到紅包",
         "ID": "身份證",
         "passport": "護照",
         "unrecognized": "無法識別此圖片",
