feat: telegram ID 登录

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -9,7 +9,7 @@
         "envelopeShares": "Received {took_shares} / {shares}",
         "redenvelopefail": "Failed to get red packet information",
         "updateInfo": "Update Content",
-        "thirdLogin": "Third party quick login",
+        "thirdLogin": "Login in other ways",
         "send": "Send",
         "logging": "Logging in",
         "send2": "Send",
@@ -30,6 +30,7 @@
         "ZHcn": "Simplified Chinese",
         "ENus": "English",
         "sendSuccess": "Sent successfully",
+        "sendFail": "Fail in send",
         "copySuccessful": "Copy successfully",
         "copyUnsuccessful": "Copy failed",
         "country": "country / region",
@@ -170,6 +171,8 @@
     },
     "login": {
         "loginTitle": "Login account",
+        "tgLogin": "Login for Telegram ",
+        "tgLoginId": "Please enter your Telegram ID",
         "loginTip": "You will have a multi-chain wallet",
         "phone": "Phone number",
         "email": "Email",
@@ -346,12 +349,12 @@
         "selecPayWay": "Select payment type",
         "payway": "Payment",
         "bankDeposit": "Account Bank",
-        "Placetel": "please fill in the contact number,",
-        "Placeaddress": "please fill in the transaction address,",
-        "Placefulladdress": "please fill in the Full address,",
-        "Fulladdress": "Full address,",
-        "Deletetitle": "are you sure you want to delete the collection and payment",
-        "Address": "transaction address"
+        "placeTel": "please fill in the contact number",
+        "placeAddress": "please fill in the transaction address",
+        "placeFullAddress": "please fill in the Full address",
+        "fullAddress": "Full address",
+        "deleteTitle": "are you sure you want to delete the collection and payment",
+        "address": "transaction address"
     },
     "otc": {
         "otcAdv": "Place order",
@@ -602,6 +605,7 @@
         "pwdErr": "Please enter a password of 6~16 letters or numbers",
         "pwd2Err": "The two password entries are not consistent",
         "emailErr": "please enter your vaild email",
+        "tIdErr": "Please enter a valid Telegram Id",
         "icCardErr": "Please enter the correct ID number",
         "nameErr": "Please enter your real name",
         "payErr": "Please enter a 6-digit password",
