--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -9,7 +9,7 @@
         "envelopeShares": "已领取{took_shares}/{shares}个",
         "redenvelopefail": "获取红包信息失败",
         "updateInfo": "更新内容",
-        "thirdLogin": "第三方快捷登录",
+        "thirdLogin": "其它方式登录",
         "logging": "登录中",
         "send": "发 送",
         "send2": "发送",
@@ -61,6 +61,7 @@
         "ENus": "英文",
         "networkErr": "网络错误，刷新后重试",
         "sendSuccess": "发送成功",
+        "sendFail": "发送失败",
         "copySuccessful": "复制成功",
         "copyUnsuccessful": "复制失败",
         "country": "国家/地区",
@@ -171,6 +172,8 @@
     },
     "login": {
         "loginTitle": "登录账号",
+        "tgLogin": "Telegram登录",
+        "tgLoginId": "请输入Telegram ID",
         "loginTip": "你将会拥有多链钱包",
         "registSuccess": "注册成功",
         "loginFailed": "登录失败",
@@ -605,6 +608,7 @@
         "pwdErr": "请输入大于6位小于16位字母或数字的密码",
         "pwd2Err": "两次密码输入不一致",
         "emailErr": "请输入正确的邮箱",
+        "tIdErr": "请输入正确的Telegram Id",
         "idCardErr": "请输入正确的身份证号",
         "nameErr": "请输入真实姓名",
         "payErr": "请输入6位数字密码",
