--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -9,7 +9,7 @@
         "envelopeShares": "已領取{took_shares}/{shares}個",
         "redenvelopefail": "獲取紅包資訊失敗",
         "updateInfo": "更新內容",
-        "thirdLogin": "協力廠商快捷登入",
+        "thirdLogin": "其它管道登入",
         "send": "發 送",
         "logging": "登入中",
         "send2": "發送",
@@ -61,6 +61,7 @@
         "ENus": "英文",
         "networkErr": "網絡錯誤，刷新後重試",
         "sendSuccess": "發送成功",
+        "sendFail": "發送失敗",
         "copySuccessful": "複製成功",
         "copyUnsuccessful": "複製失敗",
         "country": "國家/地區",
@@ -170,6 +171,8 @@
     },
     "login": {
         "loginTitle": "登錄賬號",
+        "tgLogin": "Telegram登入",
+        "tgLoginId": "請輸入 Telegram ID",
         "loginTip": "你將會擁有多鏈錢包",
         "registSuccess": "註冊成功",
         "loginFailed": "登錄失敗",
@@ -601,6 +604,7 @@
         "pwdErr": "請輸入大於6位小於16位字母或數字的密碼",
         "pwd2Err": "兩次密碼輸入不一致",
         "emailErr": "請輸入正確的郵箱",
+        "tIdErr": "請輸入正確的Telegram Id",
         "idCardErr": "請輸入正確的身份證號",
         "nameErr": "請輸入真實姓名",
         "payErr": "請輸入6位數字密碼",
