--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -550,6 +550,30 @@
         "noticeList": "公告列表",
         "noticeDetail": "公告详细"
     },
+    "envelope": {
+        "logs": "红包记录",
+        "receivedEnvelope": "领取红包",
+        "receivedEnvelopeTotal": "共收到{total}个红包",
+        "sendEnvelopeTotal": "共发出{total}个红包",
+        "received": "领取",
+        "sendEnvelope": "发红包",
+        "sendOfEnvelope": "发送红包",
+        "tipForTime": "24小时内未被领取，红包金额将退回",
+        "entryCdkForEnvelope": "输入口令，领取红包",
+        "cdkEnvelope": "口令红包",
+        "singleEnvelope": "单个金额",
+        "enterAmount": "填写金额",
+        "envelopeNum": "红包个数",
+        "enterNum": "填写个数",
+        "individual": "个",
+        "blessing": "祝福语",
+        "envelopeCdk": "红包口令",
+        "setEnvelopeCdk": "设置红包口令",
+        "envelopeIsReady": "红包已备好",
+        "copyCdk": "复制口令",
+        "shareCdk": "分享口令",
+        "entryCdk": "填写口令"
+    },
     "error": {
         "ERR_SERVER_ERROR": "服务器内部错误",
         "ERR_PARAMS_ERROR": "参数错误",
