--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -1,5 +1,6 @@
 {
     "language": "中文",
+    "shareRedEnvelopeText": "请前往BagPay钱包-红包 输入口令👉{cdk}👈领取红包 https://bagpay.io/",
     "footer": {
         "home": "首页",
         "mine": "我的"
@@ -8,10 +9,9 @@
         "envelopeSender": "{sender}的红包",
         "envelopeShares": "已领取{took_shares}/{shares}个",
         "redenvelopefail": "获取红包信息失败",
-        "shareRedEnvelopeText": "请前往BagPay钱包输入口令👉{cdk}👈领取红包 https://bagpay.io/",
         "redEnvelope": "红包",
         "fixedAmount": "固定金额",
-        "byLuck": "拼手气",
+        "byLuck": "随机红包",
         "updateInfo": "更新内容",
         "thirdLogin": "其它方式登录",
         "logging": "登录中",
@@ -553,15 +553,20 @@
     "envelope": {
         "logs": "红包记录",
         "receivedEnvelope": "领取红包",
+        "invalidCdk": "无效的口令",
+        "reSend": "继续发送",
         "receivedEnvelopeTotal": "共收到{total}个红包",
         "sendEnvelopeTotal": "共发出{total}个红包",
         "received": "领取",
+        "mineReceived": "我收到的",
+        "mineSend": "我收到的",
         "sendEnvelope": "发红包",
         "sendOfEnvelope": "发送红包",
         "tipForTime": "24小时内未被领取，红包金额将退回",
         "entryCdkForEnvelope": "输入口令，领取红包",
         "cdkEnvelope": "口令红包",
         "singleEnvelope": "单个金额",
+        "allAmount": "总金额",
         "enterAmount": "填写金额",
         "envelopeNum": "红包个数",
         "enterNum": "填写个数",
