feat: 商户页面优化

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -12,6 +12,7 @@
         "redEnvelope": "Red envelope",
         "fixedAmount": "Fixed amount",
         "byLuck": "By Luck",
+        "merchant": "Merchant",
         "updateInfo": "Update Content",
         "thirdLogin": "Login in other ways",
         "send": "Send",
