--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -12,6 +12,7 @@
         "redEnvelope": "红包",
         "fixedAmount": "固定金额",
         "byLuck": "随机红包",
+        "merchant": "商家服务",
         "updateInfo": "更新内容",
         "thirdLogin": "其它方式登录",
         "logging": "登录中",
