--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -12,6 +12,7 @@
         "redEnvelope": "紅包",
         "fixedAmount": "固定金額",
         "byLuck": "隨機紅包",
+        "merchant": "商家服務",
         "updateInfo": "更新內容",
         "thirdLogin": "其它管道登入",
         "send": "發 送",
