feat: 商户部分翻译

--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -163,6 +163,19 @@
         "balanceLogTypeSendRedEnvelope":  "发红包",
         "balanceLogTypeRedEnvelopeRefund":"红包退款",
         "balanceLogTypeGotRedEnvelope":   "得到红包",
+        "January": "1月",
+        "February": "2月",
+        "March": "3月",
+        "April": "4月",
+        "May": "5月",
+        "June": "6月",
+        "July": "7月",
+        "August! ": "8月",
+        "September": "9月",
+        "October": "10月",
+        "November": "11月",
+        "December": "12月",
+        "year": "年",
         "ID": "身份证",
         "passport": "护照",
         "unrecognized": "无法识别此图片",
@@ -590,7 +603,7 @@
     },
     "merchant": {
         "title": "商家服务",
-        "fund ": "资金管理",
+        "fund": "资金管理",
         "balance": "账户余额",
         "balanceToday": "今日收款",
         "balanceRecord": "收款记录",
@@ -598,7 +611,16 @@
         "safeTip2": "C2C点对点不受监控",
         "safeTip3": "离线蓝牙签名",
         "safeTip4": "接入API与SDK到您的网站/APP",
+        "safeTip5": "Bagpay是使用USDT的最佳支付系统,不论收款或付款,我们通通包办到好,不管您是电脑网站还是APP,我们都有提供API与SDK的模式让您快速接入。",
         "gateway": "支付网关",
+        "viewAPI": "查看API文档",
+        "downloadAPI": "下载API文档",
+        "member": "会员",
+        "exchange": "交易所",
+        "platform": "平台",
+        "apply": "立即申请",
+        "statistics": "统计",
+        "total": "共 {total} 笔",
         "fastAndSafe": "快速安全"
     },
     "error": {
