--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -162,6 +162,19 @@
         "compressing": "Compressing",
         "cancle2": "Cancel",
         "status": "Status",
+        "January": "January",
+        "February": "February",
+        "March": "March",
+        "April": "April",
+        "May": "May",
+        "June": "June",
+        "July": "July",
+        "August! ": "August",
+        "September": "September",
+        "October": "October",
+        "November": "November",
+        "December": "December",
+        "year": ",",
         "networkErr": "Network error, try again after refreshing",
         "abnormal": "abnormal",
         "unrecognized": "Unrecognized this picture",
