--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -162,6 +162,19 @@
         "balanceLogTypeSendRedEnvelope": "發紅包",
         "balanceLogTypeRedEnvelopeRefund": "紅包退款",
         "balanceLogTypeGotRedEnvelope": "得到紅包",
+        "January": "1月",
+        "February": "2月",
+        "March": "3月",
+        "April": "4月",
+        "May": "5月",
+        "June": "6月",
+        "July": "7月",
+        "August! ": "8月",
+        "September": "9月",
+        "October": "10月",
+        "November": "11月",
+        "December": "12月",
+        "year": "年",
         "ID": "身份證",
         "passport": "護照",
         "unrecognized": "無法識別此圖片",
