--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -176,6 +176,15 @@
         "November": "11月",
         "December": "12月",
         "year": "年",
+        "introduction": "简介",
+        "instructions": "使用说明",
+        "name1": "姓名",
+        "nameErr": "请输入真实姓名",
+        "placeTel": "请填写联系电话",
+        "contact": "联系方式",
+        "webUrl": "网站网址",
+        "placeUrl": "填写您的平台网址",
+        "submit": "提 交",
         "ID": "身份证",
         "passport": "护照",
         "unrecognized": "无法识别此图片",
@@ -612,6 +621,9 @@
         "safeTip3": "离线蓝牙签名",
         "safeTip4": "接入API与SDK到您的网站/APP",
         "safeTip5": "Bagpay是使用USDT的最佳支付系统,不论收款或付款,我们通通包办到好,不管您是电脑网站还是APP,我们都有提供API与SDK的模式让您快速接入。",
+        "safeTip6": "支付API(Support API)，是Bagpay对外提供带收款，付款业务。您可以通过本文档提供的简单的接口提交支付、买卖、交易等API接口。",
+        "safeTip7": "我们支持 HTTP 或者 HTTPS 请求，允许 GET 和 POST 方法。",
+        "safeTip8": "详细请前往下载API文档。",
         "gateway": "支付网关",
         "viewAPI": "查看API文档",
         "downloadAPI": "下载API文档",
@@ -621,6 +633,22 @@
         "apply": "立即申请",
         "statistics": "统计",
         "total": "共 {total} 笔",
+        "income": "收入",
+        "incomeAmoount": "收入金额",
+        "expenditureAmount": "支出金额",
+        "total1": "{total} 笔",
+        "expenditure": "支出",
+        "forDay": "按日",
+        "forMonth": "按月",
+        "recordDetail": "账单详情",
+        "currentState": "当前状态",
+        "collectionTime": "收款时间",
+        "amount": "订单金额",
+        "description": "交易说明",
+        "tradeNum": "交易订单号",
+        "merchantNum": "商户订单号",
+        "gatewayAPI": "支付网关API",
+        "applyMerchant": "商户申请",
         "fastAndSafe": "快速安全"
     },
     "error": {
