--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -175,6 +175,15 @@
         "November": "11月",
         "December": "12月",
         "year": "年",
+        "introduction": "簡介",
+        "instructions": "使用說明",
+        "name1": "姓名",
+        "nameErr": "請輸入真實姓名",
+        "placeTel": "請填寫聯繫電話",
+        "contact": "聯繫方式",
+        "webUrl": "網站網址",
+        "placeUrl": "填寫您的平臺網址",
+        "submit": "提交",
         "ID": "身份證",
         "passport": "護照",
         "unrecognized": "無法識別此圖片",
@@ -596,6 +605,47 @@
         "sentOut": "紅包已派完",
         "lookLuck": "看看朋友手氣",
         "isReady": "已領取過"
+    },
+    "merchant": {
+        "title": "商家服務",
+        "fund": "資金管理",
+        "balance": "賬戶餘額",
+        "balanceToday": "今日收款",
+        "balanceRecord": "收款記錄",
+        "safeTip1": "5分鐘內快速到賬",
+        "safeTip2": "C2C點對點不受監控",
+        "safeTip3": "離線藍牙籤名",
+        "safeTip4": "接入API與SDK到您的網站/APP",
+        "safeTip5": "Bagpay是使用USDT的最佳支付系統,不論收款或付款,我們通通包辦到好,不管您是電腦網站還是APP,我們都有提供API與SDK的模式讓您快速接入。 ",
+        "safeTip6": "支付API(Support API)，是Bagpay對外提供帶收款，付款業務。您可以通過本文檔提供的簡單的接口提交支付、買賣、交易等API接口。",
+        "safeTip7": "我們支持 HTTP 或者 HTTPS 請求，允許 GET 和 POST 方法。",
+        "safeTip8": "詳細請前往下載API文檔。",
+        "gateway": "支付網關",
+        "viewAPI": "查看API文檔",
+        "downloadAPI": "下載API文檔",
+        "member": "會員",
+        "exchange": "交易所",
+        "platform": "平台",
+        "apply": "立即申請",
+        "statistics": "統計",
+        "total": "共 {total} 筆",
+        "income": "收入",
+        "incomeAmoount": "收入金額",
+        "expenditureAmount": "支出金額",
+        "total1": "{total} 筆",
+        "expenditure": "支出",
+        "forDay": "按日",
+        "forMonth": "按月",
+        "recordDetail": "賬單詳情",
+        "currentState": "當前狀態",
+        "collectionTime": "收款時間",
+        "amount": "訂單金額",
+        "description": "交易說明",
+        "tradeNum": "交易訂單號",
+        "merchantNum": "商戶訂單號",
+        "gatewayAPI": "支付網關API",
+        "applyMerchant": "商戶申請",
+        "fastAndSafe": "快速安全"
     },
     "error": {
         "ERR_SERVER_ERROR": "服務器內部錯誤",
