--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -174,6 +174,15 @@
         "October": "October",
         "November": "November",
         "December": "December",
+        "introduction": "Introduction",
+        "instructions": "Instructions for use",
+        "name1": "Name",
+        "nameErr": "Please enter your real name",
+        "placeTel": "Please fill in the contact number",
+        "contact": "Contact Information",
+        "webUrl": "Website URL",
+        "placeUrl": "Fill in your platform URL",
+        "submit": "Submit",
         "year": ",",
         "networkErr": "Network error, try again after refreshing",
         "abnormal": "abnormal",
@@ -597,6 +606,47 @@
         "Sendout": "red packets have been sent out",
         "Lookluck": "look at a friend's luck.",
         "Isready": "received"
+    },
+    "merchant": {
+        "title": "Business Services",
+        "fund": "Fund Management",
+        "balance": "Account Balance",
+        "balanceToday": "Received today",
+        "balanceRecord": "Receipt Record",
+        "safeTip1": "Quick arrival within 5 minutes",
+        "safeTip2": "C2C peer-to-peer is not monitored",
+        "safeTip3": "Offline Bluetooth Signature",
+        "safeTip4": "Connect API and SDK to your website/APP",
+        "safeTip5": "Bagpay is the best payment system using USDT. Regardless of collection or payment, we can do everything well. Whether you are a computer website or an APP, we have an API and SDK model for quick access. ",
+        "safeTip6": "Payment API (Support API), which is provided by Bagpay externally with collection and payment services. You can submit payment, sale, transaction and other API interfaces through the simple interface provided in this document.",
+        "safeTip7": "We support HTTP or HTTPS requests, and allow GET and POST methods.",
+        "safeTip8": "For details, please go to download the API documentation.",
+        "gateway": "Payment Gateway",
+        "viewAPI": "View API Document",
+        "downloadAPI": "Download API Document",
+        "member": "Member",
+        "exchange": "Exchange",
+        "platform": "Platform",
+        "apply": "Apply now",
+        "statistics": "Statistics",
+        "total": "Total {total} pens",
+        "income": "Income",
+        "incomeAmoount": "Income Amount",
+        "expenditureAmount": "Expenditure Amount",
+        "total1": "{total} pen",
+        "expenditure": "Expenditure",
+        "forDay": "By Day",
+        "forMonth": "By Month",
+        "recordDetail": "Bill Details",
+        "currentState": "Current State",
+        "collectionTime": "Collection Time",
+        "amount": "Order Amount",
+        "description": "Transaction Description",
+        "tradeNum": "Trade Order Number",
+        "merchantNum": "Merchant Order Number",
+        "gatewayAPI": "Payment Gateway API",
+        "applyMerchant": "Merchant Application",
+        "fastAndSafe": "fast and safe"
     },
     "error": {
         "ERR_SERVER_ERROR": "Server internal error",
