feat: 新版样式风格

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -144,6 +144,10 @@
         "tranfer": "Transfer",
         "financial": "Financing",
         "news": "News",
+        "collection": "Collection",
+        "wallet": "Wallet",
+        "merchant": "Merchant",
+        "help": "Help",
         "invita": "Invite",
         "cost": "Life payment",
         "allApp": "All Apps",
