--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -102,8 +102,12 @@
         "typeNoResponse": "一直不响应",
         "typePaidButNotRelease": "已付款不放币",
         "payment": "付款",
+        "collection": "收款",
+        "wallet": "钱包",
         "tranfer": "转账",
         "financial": "理财",
+        "merchant": "商家服务",
+        "help": "新手帮助",
         "news": "资讯",
         "invita": "邀请",
         "cost": "生活缴费",
