--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -105,6 +105,10 @@
         "tranfer": "轉賬",
         "financial": "理財",
         "news": "資訊",
+        "collection": "收款",
+        "wallet": "錢包",
+        "merchant": "商家服務",
+        "help": "新手幫助",
         "invita": "邀請",
         "cost": "生活繳費",
         "allApp": "全部應用",
